--- a/Practico/Style/style.css
+++ b/Practico/Style/style.css
@@ -52,7 +52,7 @@ input[type="number"]:focus {
 
 /* Estilos de los Botones */
 button {
-    background-color: #007bff;
+    background-color: #2568b1;
     color: white;
     border: none;
     padding: 12px 20px; /* Mayor padding */
